# streamlit-invoice-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  pyproject.toml  tako-ai.conf
.github/actions/poetry_setup/: action.yml
.github/workflows/: deploy.yml  lint.yml  locales.yml  test.yml
.streamlit/: config.toml
assets/: database_propagata.sql  demo_data  layout.fdb_latexmk  layout.fls  layout.tex  schema.json
backend/: Dockerfile  __init__.py  alembic.ini  database.py  init_alembic.py  run_migration.py  server.py
backend/controllers/: __init__.py  base_controller.py  business_controller.py  client_controller.py  invoice_controller.py
backend/handlers/: business_handler.py  user_handler.py
backend/helpers/: supervisor.py  tools.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: add_business_logo.py
backend/models/: business_table.py  client_table.py  invoice_table.py  product_table.py  user_table.py
backend/routes/: __init__.py  business_router.py  client_router.py  graph.py  invoice_router.py  user_router.py
backend/utils/: logger.py
frontend/: __init__.py  app.py
frontend/data/: __init__.py
frontend/data/models/: __init__.py  business_model.py  client_model.py  invoice_model.py  product_model.py
frontend/data/providers/: __init__.py  api_provider.py  database_provider.py
frontend/data/repositories/: api_business_repository.py  api_client_repository.py  api_clinet_repository.py  api_invoice_repository.py
frontend/domain/: __init__.py
frontend/domain/entities/: __init__.py  business_entity.py  client_entity.py  invoice_entity.py  product_entity.py
frontend/domain/repositories/: business_repository_interface.py  client_repository_interface.py  invoice_repository_interface.py
frontend/domain/use_cases/: __init__.py  business_use_cases.py  client_use_cases.py  invoice_use_cases.py
frontend/presentation/dialogs/: __init__.py  delete_confirmation.py  generation_options.py
frontend/presentation/handler/: __init__.py  handler.py
frontend/presentation/pages/: ai_agent.py  business_details.py  client_details.py  history.py  invoice_details.py  login.py
frontend/presentation/widgets/: __init__.py  (+3 more)
frontend/utils/: const.py  generator.py  language.py
scripts/: generate_licences.sh  generate_locales.sh  load_env.sh
src/: __init__.py  app.py  setup.py
src/components/: __init__.py  address_fields.py  file_uploader.py  language_selector.py
src/data/: __init__.py  repository.py
src/domain/: __init__.py
src/infrastructure/: __init__.py
src/models/: business.py  invoice.py  product.py
src/pages/: __init__.py  business_details.py  client_details.py  invoice_details.py
src/presentation/: __init__.py
src/utils/: __init__.py  const.py  generator.py  language.py
tests/: factories.py  mock_populate_database.py  repository_test.py  test_repository.py  use_cases_test.py
tests/mocks/: mock.db  models_mocks.py  populate_database_mock.py  schema_mocks.py
(+77 files in other folders)
