[tool.poetry]
name = "invoice-ai"
version = "0.1.0"
package-mode = true
description = "Invoice generator powered with the use of AI Agent made by TaKo AI."
authors = ["Maciej Tarasiuk <maciej.tarasiuk@takoai.pl>", "Piotr Kazimierczak <piotr.kazimierczak@takoai.pl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.include]
"assets/*" = "assets"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
sqlalchemy = "^2.0.31"
pydantic = "1.10.13"
flask = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.4.1"
ruff = "^0.0.278"
black = "^23.7.0"
syrupy = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",
    "F",
    "I",
    "W",
]
ignore = ["F821"]
line-length = 120

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"