[tool.poetry]
name = "invoice-ai"
version = "0.1.0"
package-mode = true
description = "Invoice generator powered with the use of AI Agent made by TaKo AI."
authors = ["Maciej Tarasiuk <maciej.tarasiuk@takoai.pl>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/takoai-pl/streamlit-invoice-ai.git"
packages = [
    { include = "frontend", from = "." },
    { include = "backend", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.1"
fastapi = "^0.109.2"
langchain = "0.2.0"
langchain-community = "0.2.0"
langchain-openai = "0.1.10"
langgraph = "0.1.2"
langserve = { version = ">=0.0.6", extras = ["server"] }
uvicorn = { extras = ["standard"], version = "^0.27.1" }
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.4.1"
ruff = "^0.0.278"
black = "^23.7.0"
syrupy = "^4.0.2"
types-requests = "2.32.0.20240622"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "W"]
ignore = ["F821"]
line-length = 120
